kyverno-policies/auto-create-s3.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-s3-bucket
  annotations:
    policies.kyverno.io/title: "Create s3 Bucket"
    policies.kyverno.io/category: "AWS"
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: "S3 and EC2"
    kyverno.io/kyverno-version: 1.7.0
    policies.kyverno.io/minversion: 1.7.0
    policies.kyverno.io/description: "Create s3 Bucket"
spec:
  #generateExistingOnPolicyUpdate: true
  rules:
  - name: add-s3-bucket
    match:
      any:
      - resources:
          kinds:
          - instance
    generate:
      kind: Bucket
      apiVersion: s3.aws.crossplane.io/v1beta1
      name: s3-crossplane-bucket
      data:
        spec:
          forProvider:
            acl: private
            locationConstraint: us-west-1
            objectLockEnabledForBucket: false
          providerConfigRef:
            name: default
